--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=certificate.html?name=Sonu%20Singh&score=4" />
+  <title>Trivia Quiz Certificate</title>
 </head>
 <body>
-  <p>Redirecting to your certificate...</p>
+  <h2>Welcome to the Certificate Portal</h2>
+  <p>Your certificate will be generated from the quiz app after completion.</p>
 </body>
 </html>
